--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
     url: jdbc:mysql://127.0.0.1/sell?characterEncoding=utf-8&useSSL=false
   jba:
     show-sql: true
+  jackson:
+    default-property-inclusion: non_null
 server:
   port: 8082
   context-path: /sell
