--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     default-property-inclusion: non_null
 server:
   port: 8082
-#  context-path: /sell
+  context-path: /sell
 #logging:
 #  pattern:
 #    console: "%d - %msg%n"
